<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.tvshow.detail.DetailTvShowActivity">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="300dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_loading" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_poster"
        android:layout_alignBottom="@id/image_poster"
        android:background="@drawable/background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        app:shapeAppearanceOverlay="@style/roundedView" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_poster"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/lato_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="@tools:sample/lorem" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/lato_light"
            android:gravity="center_vertical"
            android:text="@string/text_year"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:maxWidth="200dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lato_light"
            android:gravity="center_vertical"
            android:text="@string/text_time"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_user_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_2"
        android:drawablePadding="4dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/user_score"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_star" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_user_score"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_creator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_director"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_episode_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_episode_count"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/lato_light"
        android:maxLines="10"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:text="@tools:sample/lorem/random" />

</RelativeLayout>